--- a/package.json
+++ b/package.json
@@ -3,12 +3,35 @@
   "version": "1.0.",
   "main": "index.js",
   "license": "MIT",
+  "private": true,
   "dependencies": {
-    "lerna": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-interactions": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/react": "^6.5.10",
+    "@storybook/testing-library": "^0.0.13",
+    "@swc/core": "^1.2.233",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "babel-loader": "^8.2.5",
+    "postcss": "^8.4.16",
+    "typescript": "^4.7.4",
+    "tailwindcss": "^3.1.8",
+    "lerna": "^5.4.2"
+  },
+  "scripts": {
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
+  }
 }
