--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
+    "lerna": "^5.4.2",
     "postcss": "^8.4.16",
-    "typescript": "^4.7.4",
+    "storybook-addon-swc": "^1.1.8",
     "tailwindcss": "^3.1.8",
-    "lerna": "^5.4.2"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
