--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@swc/core": "^1.2.233",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "lerna": "^5.4.2",
     "postcss": "^8.4.16",
