--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-interactions": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
-    "@storybook/addon-postcss": "3.0.0-alpha.1",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/builder-webpack4": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack4": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/react": "^6.5.10",
     "@storybook/testing-library": "^0.0.13",
@@ -27,11 +29,17 @@
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
     "lerna": "^5.4.2",
     "postcss": "^8.4.16",
+    "postcss-loader": "^7.0.1",
+    "require-from-string": "^2.0.2",
     "storybook-addon-swc": "^1.1.8",
+    "storybook-dark-mode": "^1.1.0",
+    "style-loader": "^3.3.1",
     "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006",
