--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -3,5 +3,9 @@
   "version": "1.0.6",
   "main": "index.js",
   "license": "MIT",
-  "gitHead": "28bc0faa2f978dc3a974b3e48c7f4f6a356e2d78"
+  "gitHead": "28bc0faa2f978dc3a974b3e48c7f4f6a356e2d78",
+  "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "@heroicons/react": "1.0.6"
+  }
 }
