--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
+    "msw-storybook-addon": "^1.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -31,6 +33,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "lerna": "^5.4.2",
+    "msw": "^0.45.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
     "require-from-string": "^2.0.2",
@@ -42,7 +45,10 @@
     "webpack": "^5.74.0"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006",
+    "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
