--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.3.1",
     "@swc/core": "^1.2.233",
+    "@tanstack/react-query": "^4.2.3",
+    "@tanstack/react-query-devtools": "^4.2.3",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.8",
@@ -36,6 +38,7 @@
     "msw": "^0.45.0",
     "postcss": "^8.4.16",
     "postcss-loader": "^7.0.1",
+    "react-query": "^3.39.2",
     "require-from-string": "^2.0.2",
     "storybook-addon-swc": "^1.1.8",
     "storybook-dark-mode": "^1.1.0",
